--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-/* Tag selector to select the 'body' element */
+
 body {
-  /* Your code here! */
+  background: #00b3e6;
 }
 
-/* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
+
 div {
   width:700px;
   margin:auto;
@@ -17,7 +17,7 @@ div {
   color:red;
 }
 
-/* Class selector to select elements containing the class 'perspective-questions' */
+
 .perspective-questions {
-  /* Your code here! */
+  font-style: italic;
 }
